[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/Samurai.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]

radius = 0.5
height = 1.0

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.53125, 0.0498047, 0.0498047, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.203125, 0.192017, 0.192017, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[node name="Character" type="KinematicBody" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
health = 100
move_speed = 200
attack_damage = Vector2( 10, 20 )
attack_range_squared = 2
attack_speed = 1.0
life_per_hit = 0

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="HealthBarPosition" type="Position3D" parent="." index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.21806, 0 )

[node name="HealthBar" type="ProgressBar" parent="HealthBarPosition" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 2 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
percent_visible = false
_sections_unfolded = [ "Mouse", "Rect", "Visibility", "custom_styles" ]

[node name="Samurai" parent="." index="2" instance=ExtResource( 2 )]

[connection signal="attack_contact" from="Samurai" to="." method="_on_Samurai_attack_contact"]

[connection signal="attack_end" from="Samurai" to="." method="_on_Samurai_attack_end"]

[connection signal="attack_performed" from="Samurai" to="." method="_on_Samurai_attack_performed"]


